--- a/src/app/cafe/cafe-list/cafe-list.component.html
+++ b/src/app/cafe/cafe-list/cafe-list.component.html
@@ -1,10 +1,28 @@
 <div class="container-fluid">
   <h1>El aroma mágico</h1>
   <div class="col-4">
-    <img class="" src="/assets/ubicacion-negro.png" alt="" />
+    <img class="" src="/assets/img_cafe.png" alt="" />
   </div>
-  <p *ngFor="let cafe of cafes">
-    {{cafe.nombre}}
-  </p>
+  <table class="table" >
+    <thead class="table_title">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Región</th>
+      </tr>
+    </thead>
+    <tbody *ngFor="let cafe of cafes let i= index">
+      <tr>
+        <th scope="row">{{i+1}}</th>
+        <td>{{cafe.nombre}}</td>
+        <td>{{cafe.tipo}}</td>
+        <td>{{cafe.region}}</td>
+      </tr>
 
+    </tbody>
+  </table>
+  <div class="fixed">
+    <h5>Contact us: +57 3102105253 - info@elaromamagico.com - @elaromamagico</h5>
+  </div>
 </div>
