Se agrega funcionalidad para suma de tipo de cafe

--- a/src/app/cafe/cafe-list/cafe-list.component.html
+++ b/src/app/cafe/cafe-list/cafe-list.component.html
@@ -22,6 +22,10 @@
 
     </tbody>
   </table>
+  <div class="total">
+    <p>Total café de origen:{{sumaTipoCafe("Café de Origen")}} </p>
+    <p>Total cafè blend:{{sumaTipoCafe("Blend")}}</p>
+  </div>
   <div class="fixed">
     <h5>Contact us: +57 3102105253 - info@elaromamagico.com - @elaromamagico</h5>
   </div>
