--- a/src/app/cafe/cafe-list/cafe-list.component.html
+++ b/src/app/cafe/cafe-list/cafe-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <h1>El aroma mágico</h1>
   <div class="col-4">
-    <img class="" src="/assets/img_cafe.png" alt="" />
+    <img class="" src="/assets/img_cafe.png" alt="Cafe-principal" />
   </div>
   <table class="table" >
     <thead class="table_title">
